# homework-pub-booking

./: .env.example  ASSIGNMENT.md  ENVIRONMENT_README.md  Makefile  README.md  env-info.txt  pyproject.toml  requirements.txt  uv-installed-packages.txt
.github/workflows/: ci.yml  grade.yml
answers/: ex5_loop_scenario.md  ex9_reflection.md
docs/: rasa-setup.md
grader/: check_submit.py  dataflow_probe.py  integrity_check.py  rubric.py  run_full.py
rasa_project/: docker-compose.yml  domain.yml  endpoints.docker.yml  pyproject.toml
rasa_project/data/: flows.yml
scripts/: ex6_probe_and_run.py  nebius_smoke.py  preflight.py
starter/edinburgh_research/: data_process.py  data_read_write.py  integrity.py  run.py  templates.py  tools.py
starter/handoff_bridge/: bridge.py  routing.py  run.py  types.py  validate.py
starter/rasa_half/: run.py  structured_half.py  validator.py
starter/voice_pipeline/: README.md  input_validation.py  manager_judge.py  manager_persona.py  requirements-voice.txt  trace_events.py  voice_loop.py
tests/public/: test_ex5_scaffold.py  test_ex6_scaffold.py  test_ex7_scaffold.py  test_ex8_conversation_control.py  test_ex8_input_validation.py  test_ex8_manager_judge.py  test_ex8_scaffold.py
